<resources>
    <string name="app_name">CURA</string>
    <string name="splash_title">CURA</string>
    <string name="splash_title_sub">Companion App</string>
    <string name="splash_sub">Affordable, Continous, Personalised</string>
    <string name="signin_hello">Hello! Tap your name to get a 4 digit authentication on your phone.</string>
    <string name="message_authentication">Enter your 4 digit authentication code</string>
    <string name="hello_educator">Good morning,</string>
    <string name="resend_code">Resend Code</string>
    <string name="title_activity_home">Home</string>
    <string name="text_arrival_time">Arrival Time</string>
    <string name="txt_button_registered">Registered</string>
    <string name="txt_in_queue">In Queue</string>
    <string name="title_info_patient">About patient</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_input_search_view">Input Key Words</string>
    <string name="about_patient">About patient</string>

    <string name="select_folder">Select Folder</string>
    <string name="external_labs">External Labs</string>
    <string name="sugar_logbook">Sugar Logbook</string>
    <string name="physical_exam">Physical Exam</string>
    <string name="in_patient_notes">In Patient Notes</string>
    <string name="medicines">Medicines</string>
    <string name="done">Done</string>
    <string-array name="array_folder">
        <item>External Labs</item>
        <item>Sugar Logbook</item>
        <item>Physical Exam</item>
        <item>In Patient Notes</item>
        <item>Medicines</item>
    </string-array>
</resources>
