<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@android:color/white"
    android:id="@+id/layout_full">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2"
        android:orientation="vertical">\
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center">
            <TextView
                android:textSize="@dimen/fragment_authen_text_size"
                android:gravity="center|left"
                android:id="@+id/text_hello"
                android:text="@string/hello_educator"
                android:layout_weight="8.7"
                android:layout_width="0dp"
                android:layout_height="match_parent"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center">
        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/fragment_authen_text_size"
            android:gravity="center|left"
            android:text="@string/message_authentication"
            android:layout_weight="8.7"
            android:layout_width="0dp"
            android:layout_height="match_parent"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center">
        <LinearLayout
            android:background="@color/bgInputDigit"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="4">
                <LinearLayout
                    android:weightSum="3"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <LinearLayout
                        android:gravity="center"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <TextView
                            android:textSize="@dimen/digit_input_size"
                            android:gravity="center"
                            android:id="@+id/text_digit_first"
                            android:background="@drawable/bg_dashed_line"
                            android:layout_weight="0.7"
                            android:layout_width="0dp"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:weightSum="3"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <LinearLayout
                        android:gravity="center"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <TextView
                            android:textSize="@dimen/digit_input_size"
                            android:gravity="center"
                            android:id="@+id/text_digit_second"
                            android:background="@drawable/bg_dashed_line"
                            android:layout_weight="0.7"
                            android:layout_width="0dp"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:weightSum="3"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <LinearLayout
                        android:gravity="center"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <TextView
                            android:textSize="@dimen/digit_input_size"
                            android:gravity="center"
                            android:id="@+id/text_digit_third"
                            android:background="@drawable/bg_dashed_line"
                            android:layout_weight="0.7"
                            android:layout_width="0dp"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:weightSum="3"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <LinearLayout
                        android:gravity="center"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_weight="1.5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <TextView
                            android:textSize="@dimen/digit_input_size"
                            android:gravity="center"
                            android:id="@+id/text_digit_fourth"
                            android:background="@drawable/bg_dashed_line"
                            android:layout_weight="0.7"
                            android:layout_width="0dp"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:weightSum="4">
                <LinearLayout
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></LinearLayout>
                <LinearLayout
                    android:weightSum="4"
                    android:orientation="horizontal"
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center">
                        <LinearLayout
                        android:layout_weight="3.7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        >
                        <TextView
                            android:id="@+id/text_resend_code"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/resend_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/red"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/text_keyboard_1"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="2"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="3"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="4"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="5"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="6"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="7"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="8"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="9"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/text_keyboard_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/boder_bot_right_kb"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="@dimen/key_code_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/layout_clear"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" >
                <ImageView

                    android:layout_centerInParent="true"
                    android:id="@+id/image_clear"
                    android:src="@drawable/ic_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_clear"
                    android:background="@drawable/boder_bottom_kb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_tick"
                android:background="@drawable/boder_bottom_kb"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" >
                <ImageView
                    android:layout_centerInParent="true"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_tick"
                    android:layout_width="70dp"
                    android:layout_height="70dp" />
                <TextView
                    android:id="@+id/text_tick"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
